feat: JWT 토큰 기반 인증 구현
Backend:
- ResAuth 응답 모델 추가 (access_token, refresh_token, user_id, account_id, nickname)
- SignIn/SignUp API에서 JWT 토큰 발급
  - common.GenerateToken 사용
  - access_token (24시간 유효)
  - refresh_token (7일 유효)
- Repository 수정: 사용자 정보 반환하도록 변경
  - CheckPassword: *mysql.User 반환
  - CreateUser: 생성된 *mysql.User 반환
- UseCase 수정: ResAuth 응답 생성
- Handler 수정: 토큰 포함된 응답 반환
- Swagger 문서 업데이트
