# backend/src/docs/swagger.yaml
@@ -54,6 +54,23 @@ definitions:
       title:
         type: string
     type: object
+  response.ResAuth:
+    properties:
+      access_token:
+        type: string
+      access_token_expired_at:
+        type: integer
+      account_id:
+        type: string
+      nickname:
+        type: string
+      refresh_token:
+        type: string
+      refresh_token_expired_at:
+        type: integer
+      user_id:
+        type: integer
+    type: object
   response.ResMemo:
     properties:
       content:
@@ -97,7 +114,7 @@ paths:
       - application/json
       description: 로그인 api
       parameters:
-      - description: 로그인 요청 데이
+      - description: 로그인 요청 데이터
         in: body
         name: request
         required: true
@@ -109,9 +126,14 @@ paths:
         "200":
           description: OK
           schema:
-            type: boolean
+            $ref: '#/definitions/response.ResAuth'
         "400":
           description: Bad Request
+          schema:
+            additionalProperties: true
+            type: object
+        "401":
+          description: Unauthorized
           schema:
             additionalProperties: true
             type: object
@@ -141,7 +163,7 @@ paths:
         "200":
           description: OK
           schema:
-            type: boolean
+            $ref: '#/definitions/response.ResAuth'
         "400":
           description: Bad Request
           schema:
